force-app/main/default/objects/Discount_Coupon_Allocation__c/Discount_Coupon_Allocation__c.object-meta.xml
<CustomObject>
    <label>Discount Coupon Allocation</label>
    <nameField>
        <displayFormat>DCA-{00000}</displayFormat>
        <label>Discount Coupon Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Coupon Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>