force-app/main/default/objects/Discount_Coupon_Allocation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Discount Coupon Allocations</relationshipLabel>
    <relationshipName>Discount_Coupon_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>