force-app/main/default/objects/Discount_Coupon_Allocation__c/fields/Discount_Coupons__c.field-meta.xml
<CustomField>
    <fullName>Discount_Coupons__c</fullName>
    <label>Discount Coupons</label>
    <referenceTo>DiscountCoupons__c</referenceTo>
    <relationshipLabel>Discount Coupon Allocations</relationshipLabel>
    <relationshipName>Discount_Coupon_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>