force-app/main/default/objects/Discount_Coupon_Allocation__c/fields/eTutorSyncResponse__c.field-meta.xml
<CustomField>
    <fullName>eTutorSyncResponse__c</fullName>
    <label>eTutorSyncResponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>