force-app/main/default/objects/Discount_Coupon_Allocation__c/fields/LastSyncDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastSyncDateTime__c</fullName>
    <label>LastSyncDateTime</label>
    <type>DateTime</type>
</CustomField>