force-app/main/default/objects/Discount_Coupon_Allocation__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder__c</referenceTo>
    <relationshipLabel>Discount Coupon Allocations</relationshipLabel>
    <relationshipName>Discount_Coupon_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>