force-app/main/default/objects/Discount_Coupon_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discount_Coupons__c</columns>
    <columns>Category__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>